# snippet_maker

./: CMakeLists.txt  Index.cpp  Index.h  Sentence.h  SentenceSplitter.cpp  SentenceSplitter.h  SnippetMaker.cpp  SnippetMaker.h  Splitter.cpp  Splitter.h  TrimUtils.h  main.cpp
